# neumann-poincare-complex-scaling

./: .gitignore  README.md  environment.yml  requirements.txt  ruff.toml
.devcontainer/: Dockerfile.dolfinx-mpc-vscode  devcontainer.json  post_create_command.sh  post_start_command.sh
ComputationalPlasmonicsBEM/: Project.toml
ComputationalPlasmonicsBEM/src/: ComputationalPlasmonicsBEM.jl  Num-Neumann-Poincare.jl  operators.jl  pml.jl
bem/: Project.toml
bem/src/: ComputationalPlasmonics.jl  makietheme.jl
computational_plasmonics_FEM/: pyproject.toml
computational_plasmonics_FEM/src/computational_plasmonics_FEM/: eigv_analytical.py  eigv_fenics.py  eigv_fenicsx.py
fem/: pyproject.toml
fem/src/computational_plasmonics/: eigv_fenics.py  eigv_fenicsx.py
np_complex_scaling/: pyproject.toml
np_complex_scaling/src/np_complex_scaling/: Num_BEM.py  Num_FEM.py  Num_utils.py  juliapkg.json
np_complex_scaling/src/np_complex_scaling/styles/: beamer.mplstyle  plot_article_a4.mplstyle  plot_style.mplstyle  plot_vscode.mplstyle
scripts/: Complex-scaling-path.py  Corner-singularities.py  Essential-spectrum.py  Green-function.py  Num-Delta-isogeometric.py  Num-Droplet.py  Num-Ellipse-1-corner-minor-isogeometric.py  Num-Ellipse-1-corner-minor.py  Num-Ellipse-1-corner.py  Num-Validation-Corner.py  Num-Validation-Ellipse-isogeom.py  Num-Validation-Ellipse.py  PEP-Ellipse.py  mesh-viz.py
scripts/mesh/: Camembert.geo  Ellipse-with-1-corner_Cartesian.geo  Ellipse_Unstructured.geo
scripts/module/: Num-Neumann-Poincare.jl  Num_BEM.py  Num_FEM.py  Num_utils.py
